Pesan commit Anda yang deskriptif

--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 [
     {
-        "usertoken": "Token_Akses_User_1/B7_token",
+        "usertoken": "usertoken1",
         "nodes": [
-            {
-                "nodeId": "node/pubkey",
-                "hardwareId": "hardwere_ID_exe",
-                "proxy": "username:paswword@ip:port"
-            }
+            { "nodeId": "nodeid1", "hardwareId": "hardwareid1", "proxy": "proxy1" },
+            { "nodeId": "nodeid2", "hardwareId": "hardwareid2", "proxy": "proxy2" },
+            { "nodeId": "nodeid3", "hardwareId": "hardwareid3", "proxy": "proxy3" },
+            { "nodeId": "nodeid4", "hardwareId": "hardwareid4", "proxy": "proxy4" },
+            { "nodeId": "nodeid5", "hardwareId": "hardwareid5", "proxy": "proxy5" }
         ]
     },
     {
-        "usertoken": "Token_Akses_User_2",
+        "usertoken": "usertoken2",
         "nodes": [
-            {
-                "nodeId": "node3",
-                "hardwareId": "hw3",
-                "proxy": "" 
-            }
+            { "nodeId": "nodeid6", "hardwareId": "hardwareid6", "proxy": "proxy6" },
+            { "nodeId": "nodeid7", "hardwareId": "hardwareid7", "proxy": "proxy7" },
+            { "nodeId": "nodeid8", "hardwareId": "hardwareid8", "proxy": "proxy8" },
+            { "nodeId": "nodeid9", "hardwareId": "hardwareid9", "proxy": "proxy9" },
+            { "nodeId": "nodeid10", "hardwareId": "hardwareid10", "proxy": "proxy10" }
         ]
     }
 ]
